k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: addressbook
  labels:
    istio-injection: enabled
