k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addressbook
  namespace: addressbook
  labels:
    app: addressbook

spec:
  type: ClusterIP

  selector:
    app: addressbook
    
  ports:
  - port: 80
    targetPort: 8080
