k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: addressbook
  namespace: addressbook

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - addressbook.192.168.56.100.nip.io
      secretName: wildcard-tls

  rules:
    - host: addressbook.192.168.56.100.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: addressbook
                port:
                  number: 80
